@@ -75,6 +75,7 @@ typedef struct player_config
 	ubyte NoRankings;
 	ubyte AutomapFreeFlight;
 	ubyte NoFireAutoselect;
+	ubyte CycleAutoselectOnly;
 	int AlphaEffects;
 	int DynLightColor;
 } __pack__ player_config;
